css/styles.css
@font-face {
    font-family: shapiro-air;
    src: url("../font/shapiro-air.otf");
}

@font-face {
    font-family: halibut-serif-thin;
    src: url("../font/halibut-serif-thin.woff");
}

html, body {
    margin: 0;
    padding: 0;
    overflow-x: hidden;
}

h1, h2 {
    font-family: shapiro-air;
    font-weight: 300;
}

p, button {
    font-family: halibut-serif-thin;
}



#section-1-home {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    position: relative;
    z-index: -1;
}


#sprinkles-video {
    width: 100%;
    height: auto;
    margin-top: -200px;
    position: fixed;
    z-index: -10;
    opacity: 0.6;
}

#masthead-logo {
    width: 1350px;
    height: auto;
    margin: 50px 0 -40px 0;


}

#masthead-logo-mobile {
    display: none;
    width: 500px;
    height: auto;
    margin-top: 50px;
    margin-bottom: 10px;
}

.masthead-logo {
    position: relative;
    z-index: -10;
    filter: drop-shadow(8px 5px 0px rgba(61, 193, 210, 0.37));
}

.masthead-donut {
    width: auto;
    height: 200px;
    margin: -65px -30px 0 -30px;

}

.masthead-donut-row {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

/* donut z-index */
#dm3, #dm5, #db1, #db3, #db5, #db8 {
    z-index: 1;
}

#db4,#db7 {
    z-index: 2;
}

#dm2, #dm5 {
    z-index: -1;
}

#dt1 {
    z-index: -2;
}
/* end donut z-index */

/* donut margins */
#db2 {
    margin-top: -125px;
}

#db4, #db6 {
    margin-top: -80px;
}

#db8 {
    margin-top: -128px;
}

#db9 {
    margin-top: -90px;
}

#dm1 {
    margin-right: -60px;
}

#dm2 {
    margin-top: -120px;
}

#dm3 {
    margin-right: -50px;
}

#dm4 {
    margin-top: -100px;
}

#dt1 {
    margin-bottom: -5px;
}

#dbl, #dbr {
    margin: 0 -20px -70px -20px;
}
/* end donut margins */



#section-2-home {
    z-index: 3;
    margin-top: -100px;
    position: relative;
    height: 675px;

}

#donuts-video {
    width: 100%;
    height: auto;
}

#mobile-donut-sprinkles-bg {
    display: none;
}

#section2-content {
    margin-top: -720px;
    padding-right: 40px;
    text-align: right;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    justify-content: center;
    height: 100%;

}

#title {
    font-size: 70px;
    width: 600px;
    margin-bottom: 10px;
    line-height: 70px;
}

#s2-p {
    font-size: 27px;
    width: 550px;
}

#section-2-home button {
    background-image: linear-gradient(to right, #a9e2e6, #f6c4e9);
    padding: 6px 50px;
    font-size: 30px;
    border: 1px rgba(245, 223, 240, 0.99) solid;
    border-radius: 10px;
    margin-top: 95px;
    z-index: 10;
    transition: 0.5s ease all;
}

#section-2-home button:hover {
    background-image: linear-gradient(to right, #f6c4e9, #f6c4e9);
    border: 1px rgba(241, 150, 217, 0.99) solid;
    cursor: pointer;
}

#section2-content h1,
#section2-content p {
    z-index: 10;
    pointer-events: none;
}




.home-sprinkle {
    width: 100px;
    height: auto;
    transition: all ease 0.5s;
    transform: rotate(0deg);
    position: absolute;
    z-index: 9;
    bottom: 0px;
    right: 40px;
    background-color: greenyellow;
}





#section-3-home {
    background-color: blue;
    height: 1500px;


}


/* MEDIA QUERIES */

@media screen and (max-width: 1700px)  {

  #masthead-logo {
      width: 1200px;
  }

}

@media screen and (max-width: 1550px)  {

    #masthead-logo {
        width: 1000px;
    }

}



@media screen and (max-width: 1100px)  {

    #masthead-logo {
        width: 900px;
    }

}

@media screen and (max-width: 1000px)  {

    #masthead-logo {
        width: 800px;
    }

    #donut-container {
        margin-top: 30px;
    }
}

@media screen and (max-width: 830px)  {

    #masthead-logo {
        width: 710px;
    }

    #donut-container {
        margin-top: 40px;
    }

}




@media screen and (max-width: 768px)  {

    /* change 3 donuts with falling sprinkles video to image on mobile */
    .home-sprinkle {
        display: none;
    }

    #donuts-video {
        display: none;
    }

    #mobile-donut-sprinkles-bg {
        display: block;
        height: 432px;
        width: 100vw;
        background-image: url("../img/3-donuts-falling-sprinkles-bg.png");
        background-position: right;
        background-size: cover;
    }



}

@media screen and (max-width: 730px)  {

    #masthead-logo {
        width: 650px;
    }

    #donut-container {
        margin-top: 45px;
    }

    #sprinkles-video {
        margin-bottom: 100px;
    }

}

@media screen and (max-width: 665px)  {

    #masthead-logo {
        width: 600px;
    }

    #donut-container {
        margin-top: 50px;
    }

}


@media screen and (max-width: 615px)  {

    #masthead-logo {
        width: 550px;
    }

    #donut-container {
        margin-top: 55px;
    }

}

@media screen and (max-width: 565px)  {

    #masthead-logo {
        display: none;
    }

    #masthead-logo-mobile {
        display: block;

    }

    #sprinkles-video {
        width: 300%;
        margin-bottom: 200px;
    }

}

@media screen and (max-width: 515px)  {

    #masthead-logo-mobile {
        width: 450px;

    }

}

@media screen and (max-width: 465px)  {

    #masthead-logo-mobile {
        width: 400px;
        margin-bottom: 20px;

    }

}

@media screen and (max-width: 410px)  {

    #masthead-logo-mobile {
        width: 370px;

    }

}

@media screen and (max-width: 375px)  {

    #masthead-logo-mobile {
        width: 340px;

    }

}

@media screen and (max-width: 345px)  {

    #masthead-logo-mobile {
        width: 310px;

    }

}

